fixed alignment of labels

--- a/simple-trail/css/style.css
+++ b/simple-trail/css/style.css
@@ -1,13 +1,4 @@
-.panel .list-group-item{
-	border: 0;
-	background-color: #E5FFED;
-	background-opacity: .2;
-}
-
-.panel .panel-heading{
-	border: 0;
-	background-color: #FEFFFF;
-}
+@import url(https://fonts.googleapis.com/css?family=Oswald:400,300);
 
 #trailex.container{
 	font-family: font-family: 'Oswald', sans-serif;
@@ -21,10 +12,34 @@
 	z-index: 99999999999999;
 }
 
-#trailex h1{
+#trailex .trailMenu{
 	font-family: font-family: 'Oswald', sans-serif;
+	font-weight: 300;
+}
+
+#trailex #tag-stream{
+}
+
+#trailex .panel {
+	margin-bottom: 5%;
+	border-color:lightgrey;
+}
+
+#trailex .panel .list-group-item{
+	border: 0;
+	background-color: #lightgrey;
+	background-opacity: .2;
+}
+
+#trailex .panel .panel-heading{
+	border: 0;
+	background-color: #FEFFFF;
+}
+
+#trailex h1{
+	font-family:'Oswald', sans-serif;
 	font-weight: 400;
-	font-color: whitesmoke;
+	font-color: lightgrey;
 }
 
 #trailex .panel-heading {
@@ -51,7 +66,6 @@
 	font-weight: 300;
 	display: inline-block;
 	margin: 2px;
-
 }
 
 #trailex.container.toggled{
@@ -63,8 +77,6 @@
 	font-weight: 300;
 }
 
-
-
 #trailex .holder.hidden{
 	visibility: hidden;
 }
@@ -74,11 +86,11 @@
 }
 
 #trailex #dash{
-	margin-bottom: 10px;
+	padding-bottom: 2%;
+
 }
 
-#trailex #tag-ticker{
-	margin-bottom: 10px;
+#trailex .tag-ticker{
 }
 
 #trailex #add-tag-button{
@@ -90,23 +102,23 @@
 /*custom btstrp label colors*/
 
 .label-one{
-	background-color: #484848;
+	background-color: #404040;
 }
 
 .label-two{
-	background-color: #606060;
+	background-color: #484848;
 }
 
 .label-three{
-	background-color: #787878;
+	background-color: #505050;
 }
 
 .label-four{
-	background-color: #909090;
+	background-color: #585858;
 }
 
 .label-five{
-	background-color: #A8A8A8;
+	background-color: #606060;
 }
 
 .label-six{
@@ -114,19 +126,19 @@
 }
 
 .label-seven{
-	background-color: #282828;
+	background-color: #707070;
 }
 
 .label-eight{
-	background-color: #383838;
+	background-color: #787878;
 }
 
 .label-nine{
-	background-color: #000000;
+	background-color: #808080;
 }
 
 .label-ten{
-	background-color: #181818;
+	background-color: #888888;
 }
 
 
